fixed nav2 overflow

--- a/src/Styles/Less/Navbar.less
+++ b/src/Styles/Less/Navbar.less
@@ -74,7 +74,7 @@
     .Nav2 {
       display: flex;
       transition: 1s;
-      transform: translateX(100%);
+      transform: translateX(150%);
       background: #4d565b;
       height: 100vh;
       opacity: 0;
